# agriops-bd-ai-agent-capstone

./: .gitignore  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
