[project]
name = "agriops-bd"
version = "0.1.0"
description = "Multi-agent smart agriculture and resource planning capstone project"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "jinja2>=3.1.4",
  "requests>=2.32.3",
  "google-genai>=1.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
